--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     min-height: calc(100vh - 40px);
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-flow: column wrap;
 }
 
